more align fix

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   border-radius: 10px;
   font-size: 20px;
   justify-content: center;
+  align-items: center;
   width: 50px;
   display: flex;
   opacity: 0.8;
